--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Social Media Web Application using Nodejs Mongodb and  Expressjs",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -14,6 +14,7 @@
   "author": "JoyCode4",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2"
   }
 }
