--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "del": "^4.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-rev": "^9.0.0",
+    "gulp-rev-replace": "^0.4.4",
+    "gulp-sass": "^5.1.0",
+    "gulp-uglify-es": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "kue": "^0.11.6",
     "mongoose": "^7.5.4",
@@ -32,6 +39,10 @@
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "sass": "^1.69.4",
     "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
